--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,8 +1,8 @@
 version = "3.3.0"
-
+runner.dialect = scala3
 align.preset = most
 fileOverride {
-  "glob:**/default/src/**" {
+  "glob:**/default/src-2/**" {
      runner.dialect = scala213source3
   }
 }
